@@ -4,11 +4,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -19,59 +22,68 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+public class WebSecurityConfig {
 
 
 
     private final String websiteUrl;
     private final CustomAuthenticationProvider customAuthenticationProvider;
+    private final boolean devMode;
 
     public WebSecurityConfig(@Autowired CustomAuthenticationProvider customAuthenticationProvider,
-                             @Value("${api.customization.website.url}") String websiteUrl) {
+                             @Value("${api.customization.website.url}") String websiteUrl,
+                             @Value("${api.devMode}") boolean devMode) {
         this.customAuthenticationProvider = customAuthenticationProvider;
         this.websiteUrl = websiteUrl;
+        this.devMode = devMode;
     }
 
     @Bean
-    @Override
     public UserDetailsServiceImpl userDetailsService() {
         return new UserDetailsServiceImpl();
     }
 
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf()
-                .and()
-                .cors()
-                .and()
-                .authorizeRequests()
-                .antMatchers("/**/authenticated/*").hasAnyRole("PLAYER", "GM", "ADMIN")
-                .antMatchers("/**/DEV/*").hasRole("ADMIN")
-                .and()
-                .formLogin()
-                //.loginPage("/login")
-                .and()
-                .logout()
-                .logoutUrl("/logout")
-                .and()
-                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED);
+                .csrf(Customizer.withDefaults())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers("/**/authenticated/**").hasAnyRole("PLAYER", "GM", "ADMIN")
+                        .requestMatchers("/**/DEV/**").hasRole("ADMIN")
+                        .anyRequest().permitAll()
+                )
+                .formLogin(AbstractHttpConfigurer::disable)
+                .logout(logout -> logout.logoutUrl("/logout"))
+                .sessionManagement(session ->
+                        session
+                                .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
+                                .maximumSessions(1));
+        return http.build();
     }
 
-    @Override
-    public void configure(AuthenticationManagerBuilder auth) {
-        auth.authenticationProvider(customAuthenticationProvider);
+    @Bean
+    public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
+        AuthenticationManagerBuilder authenticationManagerBuilder =
+                http.getSharedObject(AuthenticationManagerBuilder.class);
+        authenticationManagerBuilder.authenticationProvider(customAuthenticationProvider);
+        return authenticationManagerBuilder.build();
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowCredentials(true);
-        configuration.addAllowedOrigin(websiteUrl);
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS" /* "PUT", "PATCH", "DELETE", */));
-        //configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token", "cookie"));
-        configuration.addAllowedHeader(CorsConfiguration.ALL);
-        configuration.setExposedHeaders(List.of("Access-Control-Allow-Credentials", "x-auth-token"));
+        if (devMode) {
+            configuration.addAllowedOriginPattern("*");
+            configuration.addAllowedMethod(CorsConfiguration.ALL);
+            configuration.addAllowedHeader(CorsConfiguration.ALL);
+        } else {
+            configuration.addAllowedOrigin(websiteUrl);
+            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS" /* "PUT", "PATCH", "DELETE", */));
+            configuration.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization", "x-auth-token"));
+        }
+        configuration.setExposedHeaders(List.of("x-auth-token"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
